feat: IFS-4922 update through openRewrite java 25